RESOLVED FIXED312152
github.com: emoji reaction touches code box in comment in Safari
https://bugs.webkit.org/show_bug.cgi?id=312152
Summary github.com: emoji reaction touches code box in comment in Safari
Ahmad Saleem
Reported 2026-04-13 06:00:49 PDT
Hi Team, While looking through github pr and some comments, I noticed this bug: *** Steps to reproduce *** (or more like how to see) 1. Go to https://github.com/WebKit/WebKit/pull/61331 (or direct link to comment - https://github.com/WebKit/WebKit/pull/61331#discussion_r3017341509) 2. Notice emoji reaction touch code box ** Expected Result ** There should be gap in between comment box and emoji reaction similar to Chrome Canary 149. ** Actual Result ** emoji reaction touch code box. __________________ In Developer Tools, I noticed that Safari get 167 height while Chrome gets 179.50. For this - id discussion_r3017341509 (too big HTML to paste here). __________________ Thanks!
Attachments
Safari Screenshot - Web Inspector (757.48 KB, image/png)
2026-04-13 06:01 PDT, Ahmad Saleem
no flags
Chrome Canary - DevTools + Reference Screenshot (722.97 KB, image/png)
2026-04-13 06:03 PDT, Ahmad Saleem
no flags
Test reduction (468 bytes, text/html)
2026-04-15 10:09 PDT, alan
no flags
rendering in safari, firefox, chrome (77.22 KB, image/png)
2026-04-27 00:27 PDT, Karl Dubost
no flags
Radar WebKit Bug Importer
Comment 1 2026-04-13 06:00:57 PDT
Ahmad Saleem
Comment 2 2026-04-13 06:01:24 PDT
Created attachment 479042 [details] Safari Screenshot - Web Inspector
Ahmad Saleem
Comment 3 2026-04-13 06:03:18 PDT
Created attachment 479043 [details] Chrome Canary - DevTools + Reference Screenshot
alan
Comment 4 2026-04-13 08:14:36 PDT
I am not able to reproduce it on 311084@main (spade build).
Ahmad Saleem
Comment 5 2026-04-15 09:29:44 PDT
@Alan - can you try if you are not logged in?
alan
Comment 6 2026-04-15 10:09:52 PDT
Created attachment 479095 [details] Test reduction This needs always-on (space taking) scrollbars.
Karl Dubost
Comment 7 2026-04-27 00:27:22 PDT
Created attachment 479321 [details] rendering in safari, firefox, chrome
Sammy Gill
Comment 8 2026-06-01 22:27:33 PDT
EWS
Comment 9 2026-06-03 15:59:18 PDT
Committed 314501@main (a8c7730a75ef): <https://commits.webkit.org/314501@main> Reviewed commits have been landed. Closing PR #66201 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.